# ziti-streaming-webapp

./: README.md  config.toml  main.py  pyproject.toml
static/: sse-client.html
ziti_streaming_webapp/: __main__.py  frame_producer.py  webapp.py  webconfig.py
