[build-system]
requires = [
  "hatchling",
  "hatch-vcs",
]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
  "ziti-streaming-webapp",
]

[tool.hatch.build.targets.wheel]
include = [
  "ziti-streaming-webapp",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.envs.test]
dependencies = [
  "coverage[toml]",
  "pytest",
  "pytest-cov",
  "pytest-mock",
]

[tool.hatch.envs.test.scripts]
run-coverage = "pytest --cov-config=pyproject.toml --cov=ziti-streaming-webapp --cov=tests"
run-test = "run-coverage --no-cov"


[project]
name = "ziti-streaming-webapp"
dynamic = ["version"]
dependencies = [
    "opencv-python-headless",
    "openziti",
    "fastapi",
    "asyncio",
    "hypercorn",
    "sse-starlette",
]

requires-python = ">= 3.11"
authors = [
  {name = "Jacob Dybvald Ludvigsen", email = "contributions@ingeniorskap.no"}
]
maintainers = [
  {name = "Jacob Dybvald Ludvigsen", email = "contributions@ingeniorskap.no"}
]
description = ""
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
]

[project.scripts]
ziti-webapp = "ziti_streaming_webapp.__main__.py:main"

[project.urls]
Homepage = "https://gitlab.com/papiris/ziti-streaming-webapp"
Repository = "https://gitlab.com/papiris/ziti-streaming-webapp.git"
Issues = "https://gitlab.com/papiris/ziti-streaming-webapp/-/issues"
